test/errors/constants_error/zs/constant_0x8000_error.zs
package constant_0x8000_error;

const int16 WRONG_CONSTANT = 0x8000;
